--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,7 @@
 :root {
   --md-primary-fg-color:        #2c3e50;
 }
+
+[data-md-color-scheme="default"] {
+  --md-typeset-a-color:         #18b999;
+}
